yaml/ingress/deployment_microbot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microbot
spec:
  replicas: 3
  selector:
    matchLabels:
      role: microbot
  template:
    metadata:
      labels:
        role: microbot
    spec:
      containers:
      - name: microbot
        image: gcr.io/google-samples/hello-app:2.0
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
