yaml/ingress/06-nginx-ingress-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
  namespace: nginx-ingress
spec:
  type: NodePort 
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30002
    protocol: TCP
    name: http
  selector:
    app: nginx-ingress
