yaml/ingress/service_microbot.yaml
apiVersion: v1
kind: Service
metadata:
  name: microbot
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30003
  selector:
    role: microbot
